--- a/page3.html
+++ b/page3.html
@@ -47,6 +47,6 @@ href="style.css"
         <div><a class=front><a href="https://github.com/StefanieMayer" class="fa fa-github"></a></a></div>
     </div>
 
-    <footer>@2024 Stefanie Mayer</footer>
+    <footer>©2024 Stefanie Mayer</footer>
 </footer>
 </html>
