--- a/page2.html
+++ b/page2.html
@@ -17,15 +17,37 @@ href="style.css"
     <div class=front onclick="window.location.href='page2.html'">Open Source</div>
     <div class=front onclick="window.location.href='./page3.html'">Impressum</div>
     <div><a class=front><a href="https://www.youtube.com/@MintBlueTurquoise" class="fa fa-youtube"></a></a></div>
-    <div><a class=front><a href="https://www.instagram.com/landlebenamsee/" class="fa fa-instagram"></a></a></div>
+    <div><a class=front><a href="https://www.instagram.com/MintBlueTurquoise/" class="fa fa-instagram"></a></a></div>
     <div><a class=front><a href="https://www.linkedin.com/in/stefanie-mayer-289000252/" class="fa fa-linkedin"></a></a></div>
     <div><a class=front><a href="https://github.com/StefanieMayer" class="fa fa-github"></a></a></div>
 </div>
 </head>
 <body>
     <img class=last src="images/last pic I.png" />
-    <p>Camera: GoPro8Black</p>
+    <p>Camera: GoPro8Black <br> Laptop: Lenovo ThinkPad P50i7 <br> Code: JavaScript <br> Editor: Visual Studio Code </p>
     <p>The code is written with JavaScript, Embedded JavaScript and CSS on Visual Studio Code / Node.js. Check out the code on Github, it's open source. You can copy and paste it for your own Homepage or take some inspirations. <br> Beside you will find a more simple HTML and CSS Version.</p>
+
+    <img class=last src="images/last pic I.png" />
+
+    <p>Installation steps for the simple HTML and CSS version:</p>
+    <p>first things first: 1. install: Visual Studio Code</p>
+    <p>open up your Terminal: via Terminal/new Terminal or the even easier way: drag the terminal up with the cursor</p>
+    <p>open up the a folder: you can jump ahead with $cd "name of the folder", cave: there musst be a space between cd and the name of the folder or you can jump back with $cd .. </p>
+    <p>let's start with a new folder: $mkdir "name of your folder".js</p>
+    <p>jump into this folder with: $cd "name of your folder".js</p>
+    <p>create the JavaScript file with: $touch index.js</p>
+    <p>create the CSS file with: $touch style.css</p>
+
+    <p>and now copy and paste the index.js code into the index.js file and the style.css code into the style.css file from github, edit the text inside "p" and "/p", save your own pictures in the same folder and change the file of the pictures</p>
+    <p>save with the shortcut STRG S</p>
+
+    <p>next step sign in github</p>
+    <p>go to your profil -> new repository -> name of your repository -> click on Read me -> create repository -> code -> upload files -> thats it!</p>
+    <p>to create a domaine on github: go into your repository -> settings -> pages -> branch: set from none to main -> safe and refresh several times, after a few minutes you will find your url</p>
+
+    <img class=last src="images/last pic I.png" />
+
+    <p>and the embedded Version with EJS (this is much harder, but also much more fun, because you can upload every version via gitcontrol in your github, so if you messed up your code, you can easily jump back)</p>
 </body>
 <footer>
     <img class=last src="images/last pic I.png" />
@@ -35,7 +57,7 @@ href="style.css"
         <div class=front onclick="window.location.href='./page2.html'">Open Source</div>
         <div class=front onclick="window.location.href='./page3.html'">Impressum</div>
         <div><a class=front><a href="https://www.youtube.com/@MintBlueTurquoise" class="fa fa-youtube"></a></a></div>
-        <div><a class=front><a href="https://www.instagram.com/landlebenamsee/" class="fa fa-instagram"></a></a></div>
+        <div><a class=front><a href="https://www.instagram.com/MintBlueTurquoise/" class="fa fa-instagram"></a></a></div>
         <div><a class=front><a href="https://www.linkedin.com/in/stefanie-mayer-289000252/" class="fa fa-linkedin"></a></a></div>
         <div><a class=front><a href="https://github.com/StefanieMayer" class="fa fa-github"></a></a></div>
     </div>
