--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@ href="style.css"
     <div class=front onclick="window.location.href='./page2.html'">Open Source</div>
     <div class=front onclick="window.location.href='./page3.html'">Impressum</div>
     <div><a class=front><a href="https://www.youtube.com/@MintBlueTurquoise" class="fa fa-youtube"></a></a></div>
-    <div><a class=front><a href="https://www.instagram.com/landlebenamsee/" class="fa fa-instagram"></a></a></div>
+    <div><a class=front><a href="https://www.instagram.com/MintBlueTurquoise/" class="fa fa-instagram"></a></a></div>
     <div><a class=front><a href="https://www.linkedin.com/in/stefanie-mayer-289000252/" class="fa fa-linkedin"></a></a></div>
     <div><a class=front><a href="https://github.com/StefanieMayer" class="fa fa-github"></a></a></div>
 </div>
 </head>
 <body>
-    <img class=logo src="images/Profilbild Purple React II.png" />
+    <img class=logo src="images/Profilbild Purple React II.png" alt="I have been" />
     <p>Feel free to join me!</p>
-    <img class=Smile src="images/Roundhouseskick Smile II.png" />
+    <img class=Smile src="images/Roundhouseskick Smile II.png" alt="attractet to you" />
     <P>To live in alignments with the elements.</P>
-    <img class=logo src="images/GH010268 - frame at 3m33s and at 3m55s.png" />
+    <img class=logo src="images/GH010268 - frame at 3m33s and at 3m55s.png" alt="the night we spoke deeply" />
     <p></p>
     <div class=containerII><a class=front><a href="https://www.youtube.com/@MintBlueTurquoise" class="fa fa-youtube"></a></a></div>
-    <img class=gif src="images/Kick I.gif" />
+    <img class=gif src="images/Kick I.gif" alt="for the first time" />
     <h3></h3>
 
     
@@ -43,7 +43,7 @@ href="style.css"
         <div class=front onclick="window.location.href='./page2.html'">Open Source</div>
         <div class=front onclick="window.location.href='./page3.html'">Impressum</div>
         <div><a class=front><a href="https://www.youtube.com/@MintBlueTurquoise" class="fa fa-youtube"></a></a></div>
-        <div><a class=front><a href="https://www.instagram.com/landlebenamsee/" class="fa fa-instagram"></a></a></div>
+        <div><a class=front><a href="https://www.instagram.com/MintBlueTurquoise/" class="fa fa-instagram"></a></a></div>
         <div><a class=front><a href="https://www.linkedin.com/in/stefanie-mayer-289000252/" class="fa fa-linkedin"></a></a></div>
         <div><a class=front><a href="https://github.com/StefanieMayer" class="fa fa-github"></a></a></div>
     </div>
