--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Declaration</title>
+    <title>MintBlueTurquoise</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link 
 rel="stylesheet"
@@ -22,14 +22,14 @@ href="style.css"
 </div>
 </head>
 <body>
-    <img class=logo src="images/Profilbild Purple React II.png" alt="hint"/>
+    <img class=logo src="images/Profilbild Purple React II.png"/>
     <p>Feel free to join me!</p>
-    <img class=Smile src="images/Roundhouseskick Smile II.png" alt="embedded" />
+    <img class=Smile src="images/Roundhouseskick Smile II.png"/>
     <P>To live in alignments with the elements.</P>
-    <img class=logo src="images/GH010268 - frame at 3m33s and at 3m55s.png" alt="JavaScript" />
+    <img class=logo src="images/GH010268 - frame at 3m33s and at 3m55s.png"/>
     <p></p>
     <div class=containerII><a class=front><a href="https://www.youtube.com/@MintBlueTurquoise" class="fa fa-youtube"></a></a></div>
-    <img class=gif src="images/Kick I.gif" alt="Code" />
+    <img class=gif src="images/Kick I.gif"/>
     <h3></h3>
 
     
