--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@ href="style.css"
 </div>
 </head>
 <body>
-    <img class=logo src="images/Profilbild Purple React II.png"/>
+    <img class=logo src="images/Profilbild Purple React II.png" alt="hint"/>
     <p>Feel free to join me!</p>
-    <img class=Smile src="images/Roundhouseskick Smile II.png"/>
+    <img class=Smile src="images/Roundhouseskick Smile II.png" alt="embedded"/>
     <P>To live in alignments with the elements.</P>
-    <img class=logo src="images/GH010268 - frame at 3m33s and at 3m55s.png"/>
+    <img class=logo src="images/GH010268 - frame at 3m33s and at 3m55s.png" alt="JavaScript Code"/>
     <p></p>
     <div class=containerII><a class=front><a href="https://www.youtube.com/@MintBlueTurquoise" class="fa fa-youtube"></a></a></div>
-    <img class=gif src="images/Kick I.gif"/>
+    <img class=gif src="images/Kick I.gif" alt="git version control"/>
     <h3></h3>
 
     
