--- a/page2.html
+++ b/page2.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stefanie</title>
-    <title>Document</title>
+    <title>MintBlueTurquoise</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link 
 rel="stylesheet"
@@ -24,7 +23,7 @@ href="style.css"
 </head>
 <body>
     <img class=last src="images/last pic I.png" />
-    <p>Camera: GoPro8Black <br> Laptop: Lenovo ThinkPad P50i7 <br> Code: JavaScript <br> Editor: Visual Studio Code </p>
+    <p>Camera: GoPro8Black</p>
     <p>The code is written with JavaScript, Embedded JavaScript and CSS on Visual Studio Code / Node.js. Check out the code on Github, it's open source. You can copy and paste it for your own Homepage or take some inspirations. <br> Beside you will find a more simple HTML and CSS Version.</p>
 
 </body>
