--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ href="style.css"
 </head>
 <body>
     <img class=logo src="images/Profilbild Purple React II.png"/>
-    <p>Feel free to join me!</p>
+    <p>Lorem Ipsum</p>
     <img class=Smile src="images/Roundhouseskick Smile II.png"/>
-    <P>To live in alignments with the elements.</P>
+    <P>Lorem Ipsum</P>
     <img class=logo src="images/GH010268 - frame at 3m33s and at 3m55s.png"/>
     <p></p>
     <div class=containerII><a class=front><a href="https://www.youtube.com/@MintBlueTurquoise" class="fa fa-youtube"></a></a></div>
